# fmi-ls-bus

./: .gitignore  LICENSE.txt  README.md  Release Checklist.md  Roadmap.md  roadmap - Copy (2) - Copy.drawio  roadmap - Copy.drawio  roadmap new.drawio  roadmap.drawio  roadmap_overview.drawio
.github/workflows/: build-ls-bus.yml  run-header-tests-Debug.yml  run-header-tests-Release.yml  run-header-tests.yml
docs/: 0____preamble.adoc  1____introduction.adoc  2____common_concepts.adoc  3____physical_signal_abstraction.adoc  4_4_1_can.adoc  4_4_2_lin.adoc  4_4_3_flexray.adoc  4_4_4_ethernet.adoc  4_4_4_ethernet_operations.adoc  4_4_5_generic.adoc  4____network_abstraction.adoc  5____additional_content.adoc  5____network_simulation.adoc  6____known_limitations_of_this_standard.adoc  index.adoc  index.html
docs/examples/: X_network4FMI_modelDescription.xml  X_network4FMI_modelDescription_highCut.xml  X_network4FMI_modelDescription_highCut_autosar.xml  X_network4FMI_modelDescription_highCut_dbc.xml  X_network4FMI_modelDescription_lowCut.xml  X_network4FMI_terminalsAndIcons_highCut.xml  X_network4FMI_terminalsAndIcons_highCut_autosar.xml  X_network4FMI_terminalsAndIcons_highCut_dbc.xml  X_network4FMI_terminalsAndIcons_lowCut.xml  fmi_ls_bus_manifest_example.xml
docs/headers/: fmi3LsBus.h  fmi3LsBusCan.h
docs/images/: .$ethernet_transmit.drawio.bkp  .$ethernet_transmit_collision.drawio.bkp  .$ethernet_transmit_collision_avoided.drawio.bkp  .$transmit_messages.drawio.bkp  .$transmit_messages.drawio.dtmp  architecture_bus_simulation_fmu.drawio  architecture_bus_simulation_importer.drawio  architecture_direct_connection.drawio  architecture_legend.drawio  bus_operation_can_frame_mapping_example.drawio  bus_simulation_example.drawio  bus_terminal.drawio  can_arbitration.drawio  can_arbitration_overview.drawio  can_arbitration_overview_with_buffer.drawio  can_confirmation_with_bus_simulation_fmu.drawio  can_direct_confirmation.drawio  can_error_handling_overview.drawio  can_error_state_machine.drawio  can_network_overview.drawio  can_transmission_acknowledge.drawio  can_transmit_feedback_phase.drawio  can_wake_up.drawio  ethernet_error_handling_overview.drawio  ethernet_terminals.drawio  ethernet_topology.drawio  ethernet_topology_switch_inside_Bus_Simulation.drawio  ethernet_topology_switch_inside_FMU.drawio  ethernet_transmit.drawio  ethernet_transmit_collision.drawio  ethernet_transmit_collision_avoided.drawio  ethernet_transmit_fragmented.drawio  ethernet_transmit_with_confirm.drawio  ethernet_wake_up.drawio  flexray_dynamic_segment_bus_communication_points.drawio  flexray_error_handling_overview.drawio  flexray_macroticks_segments_general.drawio  flexray_startup.drawio  flexray_startup_coldstart_emulation.drawio  flexray_static_segment_bus_communication_points.drawio  (+17 more)
docs/rules/: FMI3Schema.vdmsl  NetworkDescription.vdmsl  NetworkRules.adoc
docs/schema/: fmi3LayeredStandardBusManifest.xsd
headers/: fmi3LsBus.h  fmi3LsBusCan.h  fmi3LsBusCan2.h  fmi3LsBusEthernet.h  fmi3LsBusFlexRay.h  fmi3LsBusLin.h  fmi3LsBusUtil.h  fmi3LsBusUtilCan.h  fmi3LsBusUtilCan2.h  fmi3LsBusUtilEthernet.h  fmi3LsBusUtilFlexRay.h  fmi3LsBusUtilLin.h
headers/tests/: CMakeLists.txt  README.md
headers/tests/helper/hdr/: fmi_3_ls_bus_header_test_helper_can.h  fmi_3_ls_bus_header_test_helper_can2.h
headers/tests/helper/src/: CMakeLists.txt  fmi_3_ls_bus_header_test_helper_can.cpp  fmi_3_ls_bus_header_test_helper_can2.cpp
headers/tests/include/fmi_3_ls_bus_header_test/: fmi3LsBus.h  fmi3LsBusCan.h  fmi3LsBusUtil.h  fmi3LsBusUtilCan.h  fmi_3_ls_bus_header_test.h  fmi_3_ls_bus_header_test_can2.h
headers/tests/src/: CMakeLists.txt  fmi_3_ls_bus_header_test.cpp  fmi_3_ls_bus_header_test_can.cpp  fmi_3_ls_bus_header_test_can2.cpp
headers/tests/test/: CMakeLists.txt  RunTests.cpp  fmi_3_ls_bus_header_test.cpp  fmi_3_ls_bus_header_testTest.cpp  fmi_3_ls_bus_header_test_canTest.cpp  fmi_3_ls_bus_header_test_canTest2.cpp  fmi_3_ls_bus_header_tests_can.cpp  fmi_3_ls_bus_header_tests_can2.cpp
landingpage/: graphics.drawio
main/: LICENSE.txt  index.html
main/examples/: X_network4FMI_modelDescription_highCut.xml  X_network4FMI_modelDescription_lowCut.xml  X_network4FMI_terminalsAndIcons.xml  X_network4FMI_terminalsAndIcons_highCut.xml  X_network4FMI_terminalsAndIcons_lowCut.xml  fmi_ls_bus_manifest_example.xml
main/headers/: fmi3LsBus.h  fmi3LsBusCan.h  fmi3LsBusFlexRay.h  fmi3LsBusUtil.h  fmi3LsBusUtilCan.h  fmi3LsBusUtilEthernet.h  fmi3LsBusUtilLin.h
main/images/: architecture.drawio  architecture_bus_simulation_importer.drawio  architecture_direct_connection.drawio  bus_simulation_example.drawio  bus_terminal.drawio  can_arbitration_overview.drawio  can_arbitration_overview_with_buffer.drawio  can_error_handling_overview.drawio  can_wake_up.drawio  ethernet_transmit_collision.drawio  flexray_transmission_cancel.drawio  flexray_transmission_static_segment.drawio  high_cut_network_fmu.drawio  low_cut_communication_with_triggered_tx_clock.drawio  low_cut_time_based_port_connection.drawio  principles_of_communication_complex.drawio  principles_of_communication_direct.drawio  terminal_relations.drawio  transmit_messages.drawio
main/schema/: fmi3LayeredStandardBusManifest.xsd
schema/: fmi3LayeredStandardBusManifest.xsd
tests/: CMakeLists.txt  README.md
tests/helper/hdr/: fmi_3_ls_bus_header_test_helper_can.h  fmi_3_ls_bus_header_test_helper_can2.h  fmi_3_ls_bus_header_test_helper_ethernet.h  fmi_3_ls_bus_header_test_helper_flexray.h
tests/helper/src/: fmi_3_ls_bus_header_test_helper_can.cpp  fmi_3_ls_bus_header_test_helper_ethernet.cpp  fmi_3_ls_bus_header_test_helper_flexray.cpp
tests/test/: fmi_3_ls_bus_header_tests_can.cpp  fmi_3_ls_bus_header_tests_ethernet.cpp  fmi_3_ls_bus_header_tests_flexray.cpp
